--- a/Views/Tickets/ArchivedTickets.cshtml
+++ b/Views/Tickets/ArchivedTickets.cshtml
@@ -1,66 +1,71 @@
 ﻿@model IEnumerable<BugTrackerMVC.Models.Ticket>
+@using BugTrackerMVC.Models.Enums
 
 @{
     ViewData["Title"] = "All Tickets";
 }
 
-<div class="container mt-5">
-    <div class="card mb-3">
-        <div class="row g-0">
-            <div class="col-md-12">
-                <div class="card-body">
-                    <h1>Tickets, Archived</h1>
+<!-- DataTable -->
+<link rel="stylesheet" href="~/vendors/dataTable/datatables.min.css" type="text/css">
 
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Title)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Description)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Created)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Updated)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Archived)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.ArchivedByProject)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.Project)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.TicketPriority)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.TicketType)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.TicketStatus)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.DeveloperUser)
-                                </th>
-                                <th>
-                                    @Html.DisplayNameFor(model => model.SubmitterUser)
-                                </th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                    @foreach (var item in Model) {
+<div class="page-header">
+    <div>
+        <h3>Archived Tickets</h3>
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a asp-action="Index" asp-controller="Home">Home</a>
+                </li>
+                <li class="breadcrumb-item">
+                    <a href="#">Tickets</a>
+                </li>
+                <li class="breadcrumb-item active" aria-current="page">Archived Tickets</li>
+            </ol>
+        </nav>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
+
+        <div class="card">
+            <div class="card-body">
+                <p>
+                    <a asp-action="Create" class="btn btn-primary rounded-pill">Create New</a>
+                </p>
+
+                <table id="myTicketsTable" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Title)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Project)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Created)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Updated)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TicketType)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.TicketStatus)
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
                             <tr>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Title)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Description)
+                                    @Html.DisplayFor(modelItem => item.Project!.Name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Created)
@@ -69,40 +74,67 @@
                                     @Html.DisplayFor(modelItem => item.Updated)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Archived)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ArchivedByProject)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Project!.Description)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TicketPriority!.Name)
-                                </td>
-                                <td>
                                     @Html.DisplayFor(modelItem => item.TicketType!.Name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.TicketStatus!.Name)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.DeveloperUser!.FullName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SubmitterUser!.FullName)
-                                </td>
-                                <td>
-                                    @*<a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
-                                    <a asp-action="Restore" asp-route-id="@item.Id">Restore</a>
+                                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Edit</a>
+                                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-primary rounded-pill">Details</a>
+                                    @* show Archive button if ticket is not archived *@
+                                    @if (item.Archived == false && item.ArchivedByProject == false)
+                                    {
+                                        <a asp-action="Archive" asp-route-id="@item.Id" class="btn btn-danger rounded-pill">Archive</a>
+                                    }
+                                    @* Restore button if ticket is archived *@
+                                    else
+                                    {
+                                        <a asp-action="Restore" asp-route-id="@item.Id" class="btn btn-success rounded-pill">Restore</a>
+                                    }
+                                    @if (item.DeveloperUser?.FullName is null && User.IsInRole(nameof(BTRoles.Admin)))
+                                    {
+                                        <a class="btn btn-sm btn-info rounded-pill mx-2" asp-action="AssignDeveloper" asp-route-id="@item.Id">Assign Developer</a>
+                                    }
                                 </td>
                             </tr>
-                    }
-                        </tbody>
-                    </table>
-                </div>
+                        }
+                    </tbody>
+                </table>
             </div>
         </div>
+
     </div>
 </div>
+
+@section scripts {
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+    <script src="~/assets/js/examples/datatable.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#myTicketsTable').DataTable();
+        });
+    </script>
+
+    <!-- Sweet Alerts -->
+    <script>
+        let message = '@(ViewBag.SwalMessage)';
+        if (!message.includes("Error") && message != '') {
+            Swal.fire({
+                backdrop: false,
+                icon: 'success',
+                title: message,
+                showConfirmButton: true
+            })
+        } else if (message.includes("Error")) {
+            Swal.fire({
+                backdrop: false,
+                icon: 'error',
+                title: 'Oops...',
+                text: message
+            })
+        }
+    </script>
+}
