--- a/Views/Invites/ProcessInvite.cshtml
+++ b/Views/Invites/ProcessInvite.cshtml
@@ -5,50 +5,41 @@
     Layout = "/Views/Shared/_LoginLayout.cshtml";
 }
 
-<div class="w-50 m-auto">
-    <!-- email template -->
-    <div class="panel card-sign">
-        <div class="card-title mt-3 text-center">
-            <h2 class="title text-uppercase font-weight-bold m-0"> Invite</h2>
-        </div>
-        <div class="header">
-            <h3>
-                <span class="clearfix title">
-                    <span class="number">Welcome</span><br />
-                    <span>@Model.InviteeFirstName @Model.InviteeLastName!</span> <br>
-                </span>
-            </h3>
-            <h5><span>Company Name: @Model.Company!.Name </span></h5>
-        </div>
-        <div class="card-body">
-            <p>
-                @Model.Invitor!.FullName has invited you to collaborate on the @Model.Project!.Name project.
-                <br /><br /> Click the "JOIN" button below to register with the company and begin entering tickets.
-            </p>
-            <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/RegisterByInvite" asp-route-id="@Model.Id" asp-route-companyId="@Model.CompanyId"><i class="bi bi-box-arrow-in-right"></i> <span>JOIN</span></a>
-        </div>
+<body class="bg-white">
+    <div class="w-50 m-auto">
+        <!-- email template -->
+        <table class="body-wrap" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; width: 100%; background-color: #eaf0f7; margin: 0;" bgcolor="#eaf0f7">
+            <tr>
+                <td class="container" width="600" style="display: block !important; max-width: 600px !important; clear: both !important;" valign="top">
+                    <div class="content" style="padding: 50px 0;">
+                        <table class="main" width="100%" cellpadding="0" cellspacing="0" style="border: 1px solid #e9e9e9;" bgcolor="#fff">
+                            <tr>
+                                <td style="padding: 20px; border-radius: 0;" align="center" valign="top"><img src="~/assets/media/image/notification-icon.png" alt="image" style="margin-left: auto; margin-right: auto; display:block;width: 60px;"></td>
+                            </tr>
+                            <tr>
+                                <td style="color:#ffffff; background-color: #212f56; padding: 20px; border-radius: 0;" align="center" valign="top">Welcome, @Model.InviteeFirstName @Model.InviteeLastName!</td>
+                            </tr>
+                            <tr>
+                                <td class="content-wrap" style="padding: 20px;" valign="top">
+                                    <table width="100%" cellpadding="0" cellspacing="0">
+                                        <tr>
+                                            <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; padding: 10px" valign="top"><strong style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">@Model.Invitor!.FullName has invited you to collaborate on the @Model.Project!.Name project.</strong></td>
+                                        </tr>
+                                        <tr>
+                                            <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; padding: 10px 10px 20px;" valign="top">Click the "JOIN" button below to register with the company and begin entering tickets.</td>
+                                        </tr>
+                                        <tr>
+                                            <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; font-size: 14px; padding: 0 0 20px;" valign="top"><a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/RegisterByInvite" asp-route-id="@Model.Id" asp-route-companyId="@Model.CompanyId"><i class="bi bi-box-arrow-in-right"></i><span> JOIN</span></a></td>
+                                        </tr>
+                                    </table>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </td>
+                <td style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0;" valign="top"></td>
+            </tr>
+        </table>
+        <!-- ./ email template -->
     </div>
-    <!-- ./ email template -->
-</div>
-
-@*<div class="panel card-sign">
-    <div class="card-title mt-3 text-center">
-        <h2 class="title text-uppercase font-weight-bold m-0"> Invite</h2>
-    </div>
-    <div class="header">
-        <h3>
-            <span class="clearfix title">
-                <span class="number">Welcome</span><br />
-                <span>@Model.InviteeFirstName @Model.InviteeLastName!</span> <br>
-            </span>
-        </h3>
-        <h5><span>Company Name: @Model.Company!.Name </span></h5>
-    </div>
-    <div class="card-body">
-        <p>
-            @Model.Invitor!.FullName has invited you to collaborate on the @Model.Project!.Name project.
-            <br /><br /> Click the "JOIN" button below to register with the company and begin entering tickets.
-        </p>
-        <a class="btn btn-primary btn-lg btn-block" asp-area="Identity" asp-page="/Account/RegisterByInvite" asp-route-id="@Model.Id" asp-route-companyId="@Model.CompanyId"><i class="bi bi-box-arrow-in-right"></i> <span>JOIN</span></a>
-    </div>
-</div>*@
+</body>
