--- a/Views/Projects/Edit.cshtml
+++ b/Views/Projects/Edit.cshtml
@@ -7,6 +7,9 @@
     ViewData["Title"] = "Edit";
 }
 
+<!-- Select2 -->
+<link rel="stylesheet" href="~/vendors/select2/css/select2.min.css" type="text/css">
+
 <div class="card">
     <div class="card-body">
         <form asp-action="Edit" method="post" asp-controller="Projects" enctype="multipart/form-data">
@@ -39,7 +42,7 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="Description" class="control-label"></label>
-                        <textarea rows="4" asp-for="Description" class="form-control"></textarea>
+                        <textarea asp-for="Description" class="form-control"></textarea>
                         <span asp-validation-for="Description" class="text-danger"></span>
                     </div>
                     <div class="form-group">
@@ -54,12 +57,12 @@
                     </div>
                     <div class="form-group">
                         <label asp-for="ProjectPriorityId" class="control-label">Priority</label>
-                        <select asp-for="ProjectPriorityId" class="form-control" asp-items="ViewBag.ProjectPriorityId"></select>
+                        <select asp-for="ProjectPriorityId" class="projPriorityList" asp-items="ViewBag.ProjectPriorityId"></select>
                         <span asp-validation-for="ProjectPriorityId" class="text-danger"></span>
                     </div>
                     <div class="form-group">
                         <div class="d-flex justify-content-end">
-                            <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
+                            <input type="submit" value="Save" class="btn btn-primary rounded-pill" />
                         </div>
                     </div>
                 </div>
@@ -75,4 +78,13 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+
+    <!-- Javascript -->
+    <script src="~/vendors/select2/js/select2.min.js"></script>
+
+    <script>
+        $('.projPriorityList').select2({
+            dir: $('body').hasClass('rtl') ? 'rtl' : ''
+        });
+    </script>
 }
