--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -264,22 +264,22 @@
 
     <!-- ------------------- Gogi scripts start ----------------------------- -->
     <!-- Main scripts -->
-    <script src="../../vendors/bundle.js"></script>
+    <script src="~/vendors/bundle.js"></script>
 
     <!-- Apex chart -->
-    <script src="../../vendors/charts/apex/apexcharts.min.js"></script>
+    <script src="~/vendors/charts/apex/apexcharts.min.js"></script>
 
     <!-- Daterangepicker -->
-    <script src="../../vendors/datepicker/daterangepicker.js"></script>
+    <script src="~/vendors/datepicker/daterangepicker.js"></script>
 
     <!-- DataTable -->
-    <script src="../../vendors/dataTable/datatables.min.js"></script>
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
 
     <!-- Dashboard scripts -->
-    <script src="../../assets/js/examples/pages/dashboard.js"></script>
+    <script src="~/assets/js/examples/pages/dashboard.js"></script>
 
     <!-- App scripts -->
-    <script src="../../assets/js/app.min.js"></script>
+    <script src="~/assets/js/app.min.js"></script>
 
     <!-- Javascript -->
     <script src="~/vendors/ckeditor5/ckeditor.js"></script>
