--- a/Views/Tickets/Details.cshtml
+++ b/Views/Tickets/Details.cshtml
@@ -15,6 +15,10 @@
                 <div class="row col-cols-2 mt-5">
                     <h1>Ticket Details</h1>
 
+                    <div class="d-flex justify-content-end my-2">
+                        <a asp-action="AllTickets" class="btn btn-primary rounded-pill">Back to List</a>
+                    </div>
+
                     <div class="card col m-1 p-2">
                         <div class="card-body">
                             @*Title of Ticket*@
