--- a/Views/Tickets/Edit.cshtml
+++ b/Views/Tickets/Edit.cshtml
@@ -4,79 +4,91 @@
     ViewData["Title"] = "Edit";
 }
 
-<div class="container mt-5">
+<!-- Select2 -->
+<link rel="stylesheet" href="~/vendors/select2/css/select2.min.css" type="text/css">
 
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-action="Edit" method="post" asp-controller="Tickets">
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <input type="hidden" asp-for="Id" />
-                <input type="hidden" asp-for="ProjectId" />
-                <input type="hidden" asp-for="Created" />
-                <input type="hidden" asp-for="Updated" />
-                <input type="hidden" asp-for="Archived" />
-                <input type="hidden" asp-for="ArchivedByProject" />
-                <input type="hidden" asp-for="DeveloperUserId" />
-                <input type="hidden" asp-for="SubmitterUserId" />
+<div class="card">
+    <div class="card-body">
+        <form asp-action="Edit" method="post" asp-controller="Projects" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="ProjectId" />
+            <input type="hidden" asp-for="Created" />
+            <input type="hidden" asp-for="Updated" />
+            <input type="hidden" asp-for="Archived" />
+            <input type="hidden" asp-for="ArchivedByProject" />
+            <input type="hidden" asp-for="DeveloperUserId" />
+            <input type="hidden" asp-for="SubmitterUserId" />
 
-                <h1>Edit a Ticket</h1>
-                <hr />
+            <h1>Edit a Ticket</h1>
+            <hr />
 
-                <div class="form-group">
-                    <label asp-for="Title" class="control-label"></label>
-                    <input asp-for="Title" class="form-control" />
-                    <span asp-validation-for="Title" class="text-danger"></span>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="form-group">
+                        <label asp-for="Title" class="control-label"></label>
+                        <input asp-for="Title" class="form-control" />
+                        <span asp-validation-for="Title" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <textarea asp-for="Description" class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TicketTypeId" class="control-label">Type</label>
+                        <select asp-for="TicketTypeId" class="ticketList" asp-items="ViewBag.TicketTypeId"></select>
+                        <span asp-validation-for="TicketTypeId" class="text-danger"></span>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="Description" class="control-label"></label>
-                    <input asp-for="Description" class="form-control" />
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                <div class="col-12 col-lg-4">
+                    <div class="form-group">
+                        <label asp-for="TicketStatusId" class="control-label">Status</label>
+                        <select asp-for="TicketStatusId" class="ticketList" asp-items="ViewBag.TicketStatusId"></select>
+                        <span asp-validation-for="TicketStatusId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="TicketPriorityId" class="control-label">Priority</label>
+                        <select asp-for="TicketPriorityId" class="ticketList" asp-items="ViewBag.TicketPriorityId"></select>
+                        <span asp-validation-for="TicketPriorityId" class="text-danger"></span>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label asp-for="ProjectId" class="control-label">Project</label>
-                    <select asp-for="ProjectId" class="form-control" disabled asp-items="ViewBag.ProjectId"></select>
-                    <span asp-validation-for="ProjectId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TicketTypeId" class="control-label">Type</label>
-                    <select asp-for="TicketTypeId" class="form-control" asp-items="ViewBag.TicketTypeId"></select>
-                    <span asp-validation-for="TicketTypeId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TicketStatusId" class="control-label">Status</label>
-                    <select asp-for="TicketStatusId" class="form-control" asp-items="ViewBag.TicketStatusId"></select>
-                    <span asp-validation-for="TicketStatusId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="TicketPriorityId" class="control-label">Priority</label>
-                    <select asp-for="TicketPriorityId" class="form-control" asp-items="ViewBag.TicketPriorityId"></select>
-                    <span asp-validation-for="TicketPriorityId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="DeveloperUserId" class="control-label"></label>
-                    <select asp-for="DeveloperUserId" class="form-control" disabled asp-items="ViewBag.DeveloperUserId"></select>
-                    <span asp-validation-for="DeveloperUserId" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="SubmitterUserId" class="control-label"></label>
-                    <select asp-for="SubmitterUserId" class="form-control" disabled asp-items="ViewBag.SubmitterUserId"></select>
-                    <span asp-validation-for="SubmitterUserId" class="text-danger"></span>
+                <div class="col-12 col-lg-4">
+                    <div class="form-group">
+                        <label asp-for="ProjectId" class="control-label">Project</label>
+                        <select asp-for="ProjectId" class="form-control" disabled asp-items="ViewBag.ProjectId"></select>
+                        <span asp-validation-for="ProjectId" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label asp-for="SubmitterUserId" class="control-label"></label>
+                        <select asp-for="SubmitterUserId" class="form-control" disabled asp-items="ViewBag.SubmitterUserId"></select>
+                        <span asp-validation-for="SubmitterUserId" class="text-danger"></span>
+                    </div>
                 </div>
                 <div class="form-group">
                     <div class="d-flex justify-content-end">
-                        <input type="submit" value="Save" class="btn btn-primary rounded-pill my-2" />
+                        <input type="submit" value="Save" class="btn btn-primary rounded-pill" />
                     </div>
                 </div>
-            </form>
+            </div>
+        </form>
+        <div>
+            <a asp-action="AllTickets" class="btn btn-primary rounded-pill">Back to List</a>
         </div>
     </div>
-
-    <div class="my-2">
-        <a asp-action="AllTickets">Back to List</a>
-    </div>
-
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <!-- Select2 -->
+    <script src="~/vendors/select2/js/select2.min.js"></script>
+
+    <script>
+        $('.ticketList').select2({
+            dir: $('body').hasClass('rtl') ? 'rtl' : ''
+        });
+    </script>
 }
